# research-rag

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chat.py  session.py  upload.py
backend/app/core/: config.py  database.py  logger.py
backend/app/models/: __init__.py  chunk.py  document.py  message.py  session.py
backend/app/schemas/: chat.py
backend/app/services/: chat_service.py  ingestion_service.py  retrieval_service.py
backend/scripts/: test1_ingestion.py  test2_rag_quality.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/session/[session_id]/: page.tsx
frontend/components/: ChatInput.tsx  ChatWindow.tsx  DocumentSidebar.tsx  MessageBubble.tsx  UploadBox.tsx
frontend/lib/: api.ts
